# limchat

./: .gitignore  CMakeLists.txt  mainwindow.ui
client/: CMakeLists.txt  clickedlabel.cpp  clickedlabel.h  global.cpp  global.h  logindialog.cpp  logindialog.h  logindialog.ui  logindialog.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  singleton.h  testdialog.ui  timerbutton.cpp  timerbutton.h
client/style/: stylesheet.qss
server/: README.md
